# c0computer

./: .gitignore  README.md  prompt.md
_more/: README.md
ai/js/: gpt_demo.js
ai/llm/: README.md  gpt.c  gpt.h  gpt.py  gptc.h  main.c  main.py  micro-gpt.py
ai/nn/: README.md  nn.c
ai拷貝/llm/: gpt  gpt.c  gpt.h  main.c
ai拷貝/nn/: nn.c  nn.h
compiler/: Makefile  test.sh
compiler/_data/: fact.host  fact.ll  fact.qd  fact1.s  fact_recursive.host  fact_recursive.ll  fact_recursive.qd  fact_test.qd  sub.host  sub.ll  sub.qd
compiler/_doc/: plan拷貝.md
compiler/c0c/: ast.c  ast.h  c0c  c0c.c  c0run.sh  codegen.c  lexer.c  lexer.h  main.c  parser.c  test.sh
compiler/c1c/: README.md
compiler/ll0/: ll0.c  ll0.h
compiler/ll0i/: build.sh
compiler/pcmake/: README.md  pcmake.py.bak  pyproject.toml
compiler/pcmake/_bak/: xmake.md
compiler/pcmake/example/hello_pcmake/: main.c
compiler/pcmake/src/pcmake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
compiler/py0c/: py0c  py0c.c  test.qd
compiler/py0c拷貝/: USER=cccuser  build.sh  py0c  py0c.c
compiler/qd0c/: build.sh  qd0c  qd0c.c  qd0lib.c
compiler/rv0/: Makefile  rv0as  rv0as.c  rv0objdump  rv0objdump.c  rv0vm  rv0vm.c  test.sh
gui/browser0/: README.md
gui/window/: README.md
os/: fs.img
os/eos-riscv/: README.md
os/fs/: README.md
os/os0/: Makefile  README.md  fs.img  httptest.sh  nettest.sh  test.md  test.py
os/user/: _echo  _grind  _kill  _stressfs
os/xv6-ext-book/: 01-xv6-overview.md  02-xv6-riscv-net-extend.md  03-xv6-ext.md  04-riscv-virtio.md  06-running-qemu.md  (+10 more)
(+248 files in other folders)
