[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# 套件名稱 (使用者用 pip install pcmake 安裝)
name = "pcmake" 
version = "0.1.0"
authors =[
  { name="Your Name", email="your.email@example.com" },
]
description = "A lightweight cross-platform C/C++ build system written in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
# 左邊是終端機執行的指令，右邊是對應到 src/pcmake/main.py 裡的 main() 函式
pcmake = "pcmake.main:main"